fix findbugs error and warning